multiple locations added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "name": "bus-itam-nodejs",
+	"version": "0.0.1",
   "dependencies": {
     "axios": "^0.26.1",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "xml2json": "^0.12.0"
   }
 }
